scenarios/multicluster/multi-primary_control_plane_scenario/samples/helloworld/helloworld-gateway-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
  namespace: sample
spec:
  hosts:
  - 'helloworld.sample.svc.cluster.local'
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld.sample.svc.cluster.local
        port:
          number: 5001
        subset: v1
    fault:
      abort:
        percentage:
          value: 50
        httpStatus: 400
---
apiVersion: 'networking.istio.io/v1alpha3'
kind: DestinationRule
metadata:
  name: helloworld
  namespace: sample
spec:
  host: helloworld.sample.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
