scenarios/multicluster/multi-primary_control_plane_scenario/samples/helloworld/helloworld-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-primary
  labels:
    app: helloworld-primary
spec:
  ports:
  - port: 5000
    name: http
  selector:
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-secondary
  labels:
    app: helloworld-secondary
spec:
  ports:
  - port: 5000
    name: http
  selector:
    version: v2
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  ports:
  - port: 5001
    targetPort: 5000
    name: http
  selector:
    common: common
---
apiVersion: 'networking.istio.io/v1alpha3'
kind: DestinationRule
metadata:
  name: helloworld-secondary
  namespace: sample
spec:
  host: helloworld-secondary.sample.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: 'networking.istio.io/v1alpha3'
kind: DestinationRule
metadata:
  name: helloworld-primary
  namespace: sample
spec:
  host: helloworld-primary.sample.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: 'networking.istio.io/v1alpha3'
kind: DestinationRule
metadata:
  name: helloworld
  namespace: sample
spec:
  host: helloworld.sample.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: sample
spec:
  mtls:
    mode: STRICT
